add student courses handler
